Added game odds to players and started building out more efficient optimizer
