# src/main/java/handler/OpponentRanksHandler.java
@@ -9,7 +9,7 @@ import java.util.Map;
 public class OpponentRanksHandler {
     public Map<String, Map<String, Integer>> handleRequest(Map<String, String> input) {
         DataCollector dataCollector = new DataCollector(new ApiCaller());
-        OpponentRanksData opponentRanksData = new OpponentRanksData(dataCollector);
-        return opponentRanksData.getNFLOpponentRanks();
+        OpponentRanksData opponentRanksData = new OpponentRanksData(dataCollector, input.get("sport"));
+        return opponentRanksData.getOpponentRanks();
     }
 }
